--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ p, a, button, input {
     transform: translate(0) scale(1); } }
 
 #bg {
-  background-image: url("../images/bg.jpg");
+  background-image: url("./bg.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -238,11 +238,11 @@ p, a, button, input {
         width: 70%;
         line-height: 220%; }
   #info-section article:nth-of-type(1) figure {
-    background-image: url("../images/info-1.jpg"); }
+    background-image: url("./info-1.jpg"); }
   #info-section article:nth-of-type(2) figure {
-    background-image: url("../images/info-2.jpg"); }
+    background-image: url("./info-2.jpg"); }
   #info-section article:nth-of-type(3) figure {
-    background-image: url("../images/info-3.jpg"); }
+    background-image: url("./info-3.jpg"); }
   #info-section article:nth-of-type(2) {
     position: relative;
     left: 60px; }
@@ -375,11 +375,11 @@ p, a, button, input {
           text-align: left;
           line-height: 240%; }
       #testimonials article #reviews .review:nth-of-type(1) figure {
-        background-image: url("../images/face-1.jpg"); }
+        background-image: url("./face-1.jpg"); }
       #testimonials article #reviews .review:nth-of-type(2) figure {
-        background-image: url("../images/face-2.jpg"); }
+        background-image: url("./face-2.jpg"); }
       #testimonials article #reviews .review:nth-of-type(3) figure {
-        background-image: url("../images/face-3.jpg"); }
+        background-image: url("./face-3.jpg"); }
       #testimonials article #reviews .review:nth-of-type(2) {
         background-color: #184a6a; }
     #testimonials article a {
@@ -419,7 +419,7 @@ p, a, button, input {
         #weekly-deal #deal #deal-details a:hover {
           opacity: .6; }
     #weekly-deal #deal figure {
-      background-image: url("../images/greece.jpg");
+      background-image: url("./greece.jpg");
       background-size: cover;
       height: 576px;
       width: 44%;
